[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Camera.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "SmallShake"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("../BigShake/MiddleShake/SmallShake:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, -2, -2, -2, -2, -2, -2, -2, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8, -8 ), Vector2( 8, 8 ), Vector2( -4, -4 ), Vector2( 4, 4 ), Vector2( -2, -2 ), Vector2( 2, 2 ), Vector2( -1, -1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "LandShake"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("../BigShake/MiddleShake/SmallShake/LandShake:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, -2, -2, -2, -2, -2, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4, -4 ), Vector2( 4, 4 ), Vector2( -2, -2 ), Vector2( 2, 2 ), Vector2( -1, -1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="Camera" type="Node2D"]
script = ExtResource( 1 )

[node name="BigShake" type="Node2D" parent="."]

[node name="MiddleShake" type="Node2D" parent="BigShake"]

[node name="SmallShake" type="Node2D" parent="BigShake/MiddleShake"]

[node name="LandShake" type="Node2D" parent="BigShake/MiddleShake/SmallShake"]

[node name="Camera" type="Camera2D" parent="BigShake/MiddleShake/SmallShake/LandShake"]
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Players" type="Node2D" parent="."]

[node name="SmallShakePlayer" type="AnimationPlayer" parent="Players"]
playback_speed = 2.0
anims/SmallShake = SubResource( 1 )

[node name="LandShakePlayer" type="AnimationPlayer" parent="Players"]
playback_speed = 2.0
anims/LandShake = SubResource( 2 )
